--- a/package.json
+++ b/package.json
@@ -14,16 +14,21 @@
     "@remix-run/node": "^2.3.1",
     "@remix-run/react": "^2.3.1",
     "@remix-run/serve": "^2.3.1",
+    "@tremor/react": "^3.11.1",
     "isbot": "^3.6.8",
+    "lucide-react": "^0.292.0",
+    "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.3.1",
     "@remix-run/eslint-config": "^2.3.1",
+    "@types/pg": "^8.10.9",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "eslint": "^8.38.0",
+    "tailwindcss": "^3.3.5",
     "typescript": "^5.1.6"
   },
   "engines": {
